// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat should render a bar chart 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
      <span>
        <i
          class="material-icons ml-2 helpIcon"
          id="tickets-created-per-channel-per-day"
        >
          info_outline
        </i>
      </span>
    </h5>
    <button
      class="csvButton btn btn-secondary"
      type="button"
    >
      <i
        class="material-icons mr-1"
      >
        file_download
      </i>
      CSV
    </button>
  </div>
  <div>
    <div>
      BarStat
    </div>
  </div>
</div>
`;

exports[`Stat should render a key metrics chart 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
    </h5>
  </div>
  <div>
    <div>
      KeyMetricStat
    </div>
  </div>
</div>
`;

exports[`Stat should render a line chart 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
      <span>
        <i
          class="material-icons ml-2 helpIcon"
          id="resolution-time"
        >
          info_outline
        </i>
      </span>
    </h5>
    <button
      class="csvButton btn btn-secondary"
      type="button"
    >
      <i
        class="material-icons mr-1"
      >
        file_download
      </i>
      CSV
    </button>
  </div>
  <div>
    <div>
      LineStat
    </div>
  </div>
</div>
`;

exports[`Stat should render a non chart element 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
    </h5>
  </div>
  <div>
    <div>
      StatCurrentDate
    </div>
  </div>
</div>
`;

exports[`Stat should render a per hour per week table 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
      <span>
        <i
          class="material-icons ml-2 helpIcon"
          id="tickets-created-per-hour-per-weekday"
        >
          info_outline
        </i>
      </span>
    </h5>
    <button
      class="csvButton btn btn-secondary"
      type="button"
    >
      <i
        class="material-icons mr-1"
      >
        file_download
      </i>
      CSV
    </button>
  </div>
  <div>
    <div>
      PerHourPerWeekTableStat
    </div>
  </div>
</div>
`;

exports[`Stat should render a table chart 1`] = `
<div>
  <div
    class="mb-3 d-flex justify-content-between align-items-baseline"
  >
    <h5
      class="mb-0 d-flex"
      style="font-size: 17px;"
    >
      Stat label
      <span>
        <i
          class="material-icons ml-2 helpIcon"
          id="latest-satisfaction-surveys"
        >
          info_outline
        </i>
      </span>
    </h5>
    <button
      class="csvButton btn btn-secondary"
      type="button"
    >
      <i
        class="material-icons mr-1"
      >
        file_download
      </i>
      CSV
    </button>
  </div>
  <div>
    <div>
      TableStat
    </div>
  </div>
</div>
`;
